[gd_scene load_steps=3 format=3 uid="uid://dxx86or0adcjx"]

[ext_resource type="Script" uid="uid://cg33rhc5t34c5" path="res://src/windows/dbase_editor/interface.gd" id="1_ed28l"]
[ext_resource type="Script" uid="uid://bh8vniea2yee2" path="res://src/utils/drag_drop_tree.gd" id="2_ti0yw"]

[node name="Interface" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -779.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ed28l")
metadata/_tab_index = 2

[node name="Tree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1
script = ExtResource("2_ti0yw")

[node name="InfoPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="item_edited" from="Tree" to="." method="_on_tree_item_edited"]
[connection signal="item_moved" from="Tree" to="." method="_on_tree_item_moved"]
[connection signal="item_selected" from="Tree" to="." method="_on_tree_item_selected"]
